// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-label Should render label with args { required: false, colon: false, identifier: 'identifier' } 1`] = `
<mg-label>
  <!---->
  <label class="mg-label" htmlfor="identifier">
    mg-label
  </label>
</mg-label>
`;

exports[`mg-label Should render label with args { required: false, colon: true, identifier: 'identifier' } 1`] = `
<mg-label>
  <!---->
  <label class="mg-label" htmlfor="identifier">
    mg-label
    :
  </label>
</mg-label>
`;

exports[`mg-label Should render label with args { required: true, colon: false, identifier: 'identifier' } 1`] = `
<mg-label>
  <!---->
  <label class="mg-label" htmlfor="identifier">
    mg-label
    <span class="is-asterisk">
      *
    </span>
  </label>
</mg-label>
`;

exports[`mg-label Should render label with args { required: true, colon: true, identifier: 'identifier' } 1`] = `
<mg-label>
  <!---->
  <label class="mg-label" htmlfor="identifier">
    mg-label
    <span class="is-asterisk">
      *
    </span>
    :
  </label>
</mg-label>
`;
